--- a/css/style.css
+++ b/css/style.css
@@ -575,6 +575,16 @@ a:hover {
   width: 100%;
 }
 
+.sub-title{
+  font-size: 42px !important;
+  font-weight: bolder;
+  line-height: 48px;
+  text-align: center;
+  width: 100%;
+  margin: 0px auto;
+  padding: 25px 0px;
+}
+
 .bottom-shadow{
 	-webkit-box-shadow:  0px 0px 3px 0px rgba(12, 12, 12, 1);
 	-moz-box-shadow: 0px 0px 3px 0px rgba(12, 12, 12, 1);
@@ -935,6 +945,92 @@ ul.hex-list li:nth-child(even){
 	cursor: pointer;
 }
 
+.half-width{
+	width: 50%;
+	padding: 0px;
+	margin: 0px;
+	float: left;
+	height: 500px;
+	display: table;
+}
+
+.half-width span{
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+	cursor: pointer;
+}
+
+.half-width h2{
+	text-align: center !important;
+	font-weight: lighter;
+	font-family: 'HelveticaNeueW01-UltLt';
+	color: #fff;
+}
+
+.line{
+	height: 1px; 
+	background: none;
+	border-bottom: 1px solid white;
+	width: 50%;
+	margin: 0 auto;
+}
+
+.get-involved-first-half{
+	height: 500px;
+	background: url(../images/7-GETINVOLVED/first-half.png);
+}
+
+.get-involved-second-half{
+	height: 500px;
+	background: url(../images/7-GETINVOLVED/second-half.png);
+}
+
+.close-lightbox{
+	position: absolute;
+	left: 100%;
+	margin-left: -68px;
+	margin-top: 15px;
+	height: 64px;
+	width: 64px;
+	cursor: pointer;
+}
+
+#test-products-details{
+	width: 50%;
+	position: absolute;
+	/*background: rgba(250,250,250, 0.5);*/
+	height: 500px;
+	top: 100px;
+	left: 0;
+	cursor: text;
+}
+
+#test-products-details-2{
+	width: 50%;
+	position: absolute;
+	background: rgba(250,250,250, 0.5);
+	height: 500px;
+	top: 100px;
+	left: 50%;
+}
+
+/*.first-layer{
+	height: 100%;
+} 
+
+.second-layer{
+	height: 100%;
+}
+
+.get-involved-layer{
+
+}
+
+.workshop-layer{
+
+}*/
+
 /***************************************
 
 MEDIA QUERIES
@@ -1237,7 +1333,7 @@ SECTIONS
 
 .cbp-so-section h2 {
 	font-size: 3em;
-	font-weight: 900;
+	font-weight: 400;
 	line-height: 1;
 	text-align: left;
 }
